@@ -18,10 +18,10 @@ define( function( require ) {
 
   /**
    * @param {Solution} solution
-   * @param {Property<GraphUnits>} graphUnitsProperty
-   * @param {Function} yToValue function that takes a {Number} y coordinate and converts it to a {Number} model value
-   * @param {Function} concentrationToPH takes {Number} concentration, returns pH
-   * @param {Function} molesToPH takes {Number} moles and {Number} volume (L), returns pH
+   * @param {Property.<GraphUnits>} graphUnitsProperty
+   * @param {function} yToValue function that takes a {number} y coordinate and converts it to a {number} model value
+   * @param {function} concentrationToPH takes {number} concentration, returns pH
+   * @param {function} molesToPH takes {number} moles and {number} volume (L), returns pH
    * @constructor
    */
   function GraphIndicatorDragHandler( solution, graphUnitsProperty, yToValue, concentrationToPH, molesToPH ) {
